fix(docs): fix dependencies in example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ maintenance = { status = "actively-developed" }
 
 [dependencies]
 futures = "0.1"
+
+[dev-dependencies]
+actix-web = "1.0"
+futures = "0.1"
