--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,4 +28,6 @@ jobs:
       - name: Run cargo clippy
         run: cargo clippy --all -- -D clippy::pedantic -D clippy::nursery -D warnings
       - name: Run tests
-        run: cargo test --verbose
+        run: |
+          cargo test --verbose
+          cargo test --features "futures_01" --no-default-features --verbose
